@@ -1,0 +1,13 @@
+<?php
+/*
+ * Register necessary class names with autoloader
+ *
+ */
+
+$extensionPath = dirname(__FILE__);
+
+return array(
+	'tx_about_customsections' => $extensionPath . '/interfaces/interface.tx_about_customsections.php',
+);
+
+?>
